assets/sass/sections/_header.scss
#masthead {
	@include breakpoint(sm) {
		position: fixed;
		height: 100%;
		padding: 1rem;
	}

	.main-navigation {
		height: 100%;
		@include breakpoint(sm) {
			margin-top: 2rem;

			.social {
				display: none;
				position: absolute;
				bottom: 0;
				@include breakpoint(sm) {
					display: block;
				}
				svg {
					width: 35px;
				}
			}

		}

		#site-navigation {
			.top-bar-section {
				.menu {
					.menu-item {
						clear: both;
						display: inline-block;

						a {
							padding: 0 .5rem;
							text-transform: uppercase;
							font-weight: 300;
						}
						&.active {
							position: relative;
						}

						&.active:before {
								border-bottom: 3px solid $red;
								position: absolute;
								z-index: -1;
								content: "";
								width: 100%;
								height: 50%;
						}
					}
				}
				.cart-contents {
					clear: both;
					display: inline-block;
					padding: 0 .5rem;
					text-transform: uppercase;
					font-weight: 300;
					float: left;
					color: $black;
					font-size: 13px;
					margin-top: 3rem;
				}
			}
		}
	}

	.site-branding {
		padding-top: 2rem;
		margin: 0 1rem;

		@include breakpoint(sm) {
			margin: 0;
		}

		.fono-logo-text {
			display: none;

			@include breakpoint(sm) {
				display: block;
			}
		}
		svg {
			max-width: 120px;
			width: 70%;
			height: auto;
		}
	}

}

.off-canvas-wrap {
	.inner-wrap {
		height: 100vh;
		.left-off-canvas-menu {
			background-color: $white;
			border-right: 1px solid $red;
			ul {
				margin: 0;
				li {
					list-style: none;
					text-align: center;
					margin: 1rem 0;

					a {
						color: $red;
						padding: 0 .5rem;
						text-transform: uppercase;
						font-weight: 300;
					}
				}
			}
		}
		.left-small {
			border-right: 1px solid $white;
		}
		.exit-off-canvas {
			box-shadow: none;
		}
	}
}

